--- a/ReadMe
+++ b/ReadMe
@@ -11,5 +11,6 @@ To execute:
 
 
 My model is uploaded to hugging face at: model_name = "owusuevans14/finetuned_T5_model_for_GEC"
+Using:  deep-learning-analytics/GrammarCorrector
 
 Thank you
